Fix issue with game screens being too large
Game screens were too large on smaller screens and did not fit into
width of the browser. Change layout from rows to columns.

--- a/style.scss
+++ b/style.scss
@@ -182,3 +182,9 @@ hr {
 .green {
     color: #14a76c;
 }
+
+@media screen and (max-width: 875px) {
+    .game-area {
+        flex-direction: column;
+    }
+}
